syntax = "proto3";
package proto.canary;

option go_package = "github.com/spinnaker/kleat/api/client/canary";

// Configuration for the Prometheus canary integration.
message Prometheus {
  // Whether the integration is enabled.
  bool enabled = 1;

  // The list of configured accounts.
  repeated PrometheusAccount accounts = 2;

  // Number of milliseconds to wait in between caching the names of available
  // metric types (used when building canary configs). Defaults to 60000.
  int32 metadataCachingIntervalMS = 3;
}

// Configuration for a Prometheus account.
message PrometheusAccount {
  // The name of the account.
  string name = 1;

  // Configuration for the Prometheus server endpoint.
  Endpoint endpoint = 2;

  // A basic auth username. Either `usernamePasswordFile` or
  // `username` and `password` is required.
  string username = 3;

  // A basic auth password. Either `usernamePasswordFile` or
  // `username` and `password` is required.
  string password = 4;

  // The path to a file containing the basic auth username and password
  // in the format `${username}:${password}`. Either `usernamePasswordFile` or
  // `username` and `password` is required.
  string usernamePasswordFile = 5;

  // Configuration for the Prometheus server endpoint.
  message Endpoint {
    // (Required) The base URL of the Prometheus server.
    string baseUrl = 1;
  }
}
